--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -32,6 +32,6 @@
       </button>
     </ion-item>
     <br>
-    <button ion-button block (click)="signup()">{{ 'SEARCH' | translate }}</button>
+    <button ion-button block (click)="search()">{{ 'SEARCH' | translate }}</button>
   </div>
 </ion-content>
